--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# TypeScript build info
+*.tsbuildinfo
+
+# Coverage
+coverage
+.nyc_output
+
+# Lint cache
+.eslintcache
