--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,22 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment
+.env
+.env.*
+!.env.example
+
+# TypeScript build info
+*.tsbuildinfo
+
+# Coverage
+coverage
+.nyc_output
+
+# Vite/React caches
+.vite
+.parcel-cache
+
+# Lint cache
+.eslintcache
